Début de dockerisation de l'application